--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: php
 php:
-  - 5.6
-  - 7.0
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
+  - nightly
 
 addons:
   apt:
     packages:
-      - php7.0-dev
+      - php7.1-dev
       - gdb
 
 env:
